ipc/ipdl/test/ipdl/ok/array_OfActorsSub.ipdl
include protocol "array_OfActors.ipdl";

protocol array_OfActorsSub {
    manager array_OfActors;

child: __delete__();
};
